<resources>
    <string name="app_name">AndMoviRoom</string>
    <string name="intwebadd">https://www.abc.es/play/cine/peliculas/</string>
    <string name="intwebaddhint">Click to access</string>
    <string name="menu_crudadd">Add Premiere</string>
    <string name="menu_inspir">Inspiration</string>
    <string name="msg_accessgh">Ghibli Studio Films</string>
    <string name="msg_accessghwt">Loading, Please wait</string>


    <string name="btn_si">Yes</string>
    <string name="btn_no">No</string>
    <string name="btCncl">Cancel</string>
    <string name="btAcptr">Ok</string>
    <string name="btAccess">Enter</string>
    <string name="btBui">Delete</string>
    <string name="btMost">Show</string>
    <string name="lbtxName">Name</string>
    <string name="lbtxTitu">title:</string>
    <string name="lbtxDescr">description:</string>
    <string name="lbtxAnyop">publish year:</string>
    <string name="lbtxPuntuac">personal valoration\(0-5):</string>
    <string name="lbtxImgUrl">Image URL:</string>


    <string name="btn_add">add</string>
    <string name="btn_del">delete</string>

    <string name="lbtxCgName">Surname</string>
    <string name="lbtxMail">Mail</string>
    <string name="lbtxDirWeb">Web Address</string>
    <string name="lbtxtel">Phone</string>
    <string name="lbtxnaix">Data Naixement</string>
    <string name="lbtxPasswd">Password</string>
    <string name="txName">Type Name</string>
    <string name="txCgName">Type Second Name</string>
    <string name="txMail">Type Mail</string>
    <string name="txWebAdd">Type web address </string>
    <string name="txtel">Type phone</string>
    <string name="txnaix">Select birth date</string>
    <string name="txLogPasswd">Type password</string>
    <string name="txWebhint">Click to access web site</string>
    <string name="err_name">Title cannot be empty!</string>
    <string name="err_anyop">Premiere year cannot be empty!!</string>
    <string name="err_punt">Valorations between 0 - 5: </string>


    <string name="errEmptyName">Name field cannot be empty!</string>
    <string name="errEmptyCgName">Second Name field cannot be empty!</string>
    <string name="errEmptyMail">Mail field cannot be empty!</string>
    <string name="errEmptyLogPassw">Password field cannot be empty!</string>
    <string name="errEmptyTelf">Phone fieldcannot be empty!</string>
    <string name="errEmptyNeix">Birthdate address cannot be empty!</string>
    <string name="errEmptyDirWeb">Web address cannot be empty</string>
    <string name="dataErr">Fill Data in a correct manner</string>
    <string name="dataErr1">E-mail and passwords cannot be empty!</string>
    <string name="dlgEsborr">Are you sure you want to deslete de data?</string>
    <string name="dataOk">Dades rebudes: El Nom és _NOM, l\'Email _EMAIL i el seu número de telèfon: _TELF</string>
    <string name="dataOk1">Dades rebudes: El Nom és _NOM, El Cognom és _COGNOM l\'Adreça Web _ADRWEB i el seu número de telèfon: _TELF</string>
    <string name="dataOk2">Correct Access for _EMAIL</string>
    <string name="delOk">Premiere deleted: _NOMPEL</string>
    <string name="dataErr2">Something strange happened</string>
    <string name="title_activity_show_data">ShowDataActivity</string>
</resources>
